# Progect_Django_rest_HW

./: .dockerignore  .env_example  Dockerfile  docker-compose.yml  groups.json  nginx.conf  payment_fixture_load.json  pyproject.toml  readme.md  user_fixture_load.json
.github/workflows/: ci.yml
config/: settings.py  urls.py
education/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
education/education/: settings.py
education/migrations/: 0001_initial.py  0002_course_owner_lesson_owner_alter_lesson_course.py  0003_course_price_lesson_price.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_subscription.py  0004_alter_payment_payment_method.py  0005_payment_stripe_payment_intent_id_and_more.py  0006_payment_stripe_session_id_and_more.py
users/users/: settings.py
